--- a/main.html
+++ b/main.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="Author" content="Mama's blog">
+	<meta name="viewport" content="width=1280">
+	<title>Mama's blog</title>
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
 </head>
 <body>
+<div id="wrap">
+	<div id="header">
+	<header id="header">
+		<h1>Mama's BLOG</h1>
+	</header>
+	</div>
+	<hr />
+	<div id="container">
+		<h2>Mama 소개</h2>
+		<p>나만의 블로그 만들기를 위해 노력해야 했던 여러 문제들에 관해 솔직하게 털어 놓는 공간입니다.</p>
+		<p>만약 제 글에서 작은 도움이라도 받으신 분이 계시다면 기쁨에 눈물을 흘릴거란 얘기이고 이는 저에게도 더 많은 노력을 위한 채찍보다 당근이 되리라 확신합니다.</p>
+	</div>
+	<hr />
+	<div id="footer">
+	<footer id="footer">
+		<address class="adr">Mama's blog / email : /</address>
+	</footer>
+	</div>
+</div>
 </body>
 </html>
